--- a/Factory.Tests/Factory.Tests.csproj
+++ b/Factory.Tests/Factory.Tests.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProjectName\ProjectName.csproj" />  
+    <ProjectReference Include="..\Factory\Factory.csproj" />  
   </ItemGroup>
 
 </Project>
